Scripts/Ingress/home.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
  namespace: simple-app
  labels:
    app: home
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home-container
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: home-service
  namespace: simple-app
  labels:
    app: home
spec:
  selector:
    app: home
  ports:
  - port: 80
    targetPort: 80
