Scripts/Ingress/login.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-deployment
  namespace: simple-app
  labels:
    app: login
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - name: login-container
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: login-service
  namespace: simple-app
  labels:
    app: login
spec:
  selector:
    app: login
  ports:
  - port: 80
    targetPort: 80
