Scripts/Ingress/welcome.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-deployment
  namespace: simple-app
  labels:
    app: welcome
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: welcome
  template:
    metadata:
      labels:
        app: welcome
    spec:
      containers:
      - name: welcome-container
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: welcome-service
  namespace: simple-app
  labels:
    app: welcome
spec:
  selector:
    app: welcome
  ports:
  - port: 80
    targetPort: 80
