Scripts/Ingress/ingress_https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: simple-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - demo.example.com
    secretName: demo-tls
  rules:
  - host: demo.example.com
    http:
      paths:
      - path: /welcome
        pathType: Prefix
        backend:
          service:
            name: welcome-service
            port:
              number: 80
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: login-service
            port:
              number: 80
